chore: fixed content and spacing

--- a/src/pages/mystrava/SegmentStory.css
+++ b/src/pages/mystrava/SegmentStory.css
@@ -2,13 +2,15 @@
 height: 100vh;
 /* background-image: linear-gradient(rgb(247, 247, 250) 1px,#ffea00,#ffea00,#ffea00,#ffea00,#ffea00,#ffea00,#ffea00,#ffea00,#ffea00, #ffea00); */
 background-color: #ffffff;
+background-color: rgb(247, 247, 250);
 font-family: 'Maison Neue';
+margin-bottom: 15vw;
 }
 
 .title-new-features-ss {
     margin: 5vw;
     margin-bottom: 10vw;
-    font-size: 3.5vw;
+    font-size: 3.0vw;
     width:34vw;
     font-weight: 500;
 }
